Bug fix to always align last page from the carousel

--- a/slick/slick-theme.scss
+++ b/slick/slick-theme.scss
@@ -131,7 +131,7 @@ $slick-opacity-not-active: 0.25 !default;
 /* Dots */
 
 .slick-dotted.slick-slider {
-    margin-bottom: 30px;
+    margin-bottom: 38px;
 }
 
 .slick-dots {
@@ -146,15 +146,15 @@ $slick-opacity-not-active: 0.25 !default;
     li {
         position: relative;
         display: inline-block;
-        height: 20px;
-        width: 20px;
+        height: 15px;
+        width: 15px;
         padding: 0;
         cursor: pointer;
         button {
             border: 0;
             background: transparent;
             display: block;
-            height: 20px;
+            height: 38px;
             width: 20px;
             outline: none;
             line-height: 0px;
@@ -174,7 +174,7 @@ $slick-opacity-not-active: 0.25 !default;
                 height: 20px;
                 font-family: $slick-font-family;
                 font-size: $slick-dot-size;
-                line-height: 22px;
+                line-height: 40px;
                 text-align: center;
                 color: $slick-dot-color;
                 opacity: $slick-opacity-not-active;
